# temp-inst-sae

./: .gitignore  README.md
examples/: README.md  linear_idol_model.py  main.py  requirements.txt  utils.py
examples/submodule_dl/dictionary_learning/: buffer.py
synthetic/: README.md  complete-3.py  linear_complexity.sh  pyproject.toml  scratch.py  utils.py
